Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-21620

Crash when .pragma library .imports another JS file

    XMLWordPrintable

Details

    • 4c01174b63e049eeb945081e1e6cc7b09514fc6b

    Description

      Attached files demonstrate the issue.

      Attachments

        1. importCrash.qml
          0.3 kB
          Michael Brasser (closed Nokia identity)
        2. import2.js
          0.0 kB
          Michael Brasser (closed Nokia identity)
        3. import1.js
          0.1 kB
          Michael Brasser (closed Nokia identity)
        For Gerrit Dashboard: QTBUG-21620
        # Subject Branch Project Status CR V

        Activity

          People

            chriadam Christopher Adams (closed Nokia identity) (Inactive)
            brasser Michael Brasser (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes